# src/main/java/com/vivelibre/springboot/app/api/BooksApi.java
@@ -216,4 +216,31 @@ public interface BooksApi {
             produces = { "application/json" }
     )
     ResponseEntity<Map<String, Object>> getAuthorDuplicatedAndNotTimestamp();
+
+    /**
+     * GET /newestBooks : Obtener todos los libros
+     *
+     * @return Lista de libros obtenida correctamente (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Not found (status code 404)
+     *         or Error interno del servidor. (status code 500)
+     */
+    @Operation(
+            operationId = "getNewestBooks",
+            summary = "Obtener todos los libros",
+            responses = {
+                    @ApiResponse(responseCode = "200", description = "Lista de libros obtenida correctamente", content = {
+                            @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = Book.class)))
+                    }),
+                    @ApiResponse(responseCode = "400", description = "Bad Request"),
+                    @ApiResponse(responseCode = "404", description = "Not found"),
+                    @ApiResponse(responseCode = "500", description = "Error interno del servidor.")
+            }
+    )
+    @RequestMapping(
+            method = RequestMethod.GET,
+            value = "/getNewestBooks",
+            produces = { "application/json" }
+    )
+    ResponseEntity<List<Book>> getNewestBooks();
 }
